{Hanik Sator} + Part 1 added BarnesAndNoble Tests

--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.10</version>
+                <version>0.8.12</version>   <!-- Needed to use later version since using Java 23 -->
                 <executions>
                     <execution>
                         <id>default-prepare-agent</id>
