--- a/.github/workflows/SE333_CI.yml
+++ b/.github/workflows/SE333_CI.yml
@@ -22,7 +22,7 @@ jobs:
         run: mvn checkstyle:checkstyle
 
       - name: Run Checkstyle
-        run: mvn checkstyle:checkstyle site
+        run: mvn checkstyle:checkstyle
 
       - name: Upload Checkstyle Result
         uses: actions/upload-artifact@v4
